fixed lightbox overflow and size issues on tablet and desktop

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -97,3 +97,19 @@
 	font-size: 1rem;
 	cursor: pointer;
 }
+
+@media screen and (min-width: 768px) {
+	.popup-content {
+		width: 100%;
+		height: 80%;
+		overflow: hidden;
+	}
+}
+
+@media screen and (min-width: 1100px) {
+	.popup-content {
+		width: 100%;
+		height: 90%;
+		overflow: hidden;
+	}
+}
